# QuantPilot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/indicators/: 20250801.json  20250804.json  20250805.json  20250806.json  20250807.json  20250808.json  20250811.json  20250812.json  20250813.json  20250814.json  20250815.json  20250818.json  20250819.json  20250820.json  20250821.json  20250822.json  20250825.json  20250826.json  20250827.json  20250828.json  20250829.json  20250901.json  (+224 more)
docs/: api.md  architecture.md  daily_report.md  daily_update_runbook.md  dashboard_prd.md  data_governance_audit.md  data_governance_plan.md  file_structure.md  indicators.md  report_audit_2026-06-24.md  report_semantic_audit.md  s2_daily_report.md  usage.md  创新药_第一阶段_v2_claude.xlsx
reports/: data_quality_report.md
s2/: README.md  __init__.py  agent_task.md  ai_biotech_validation.py  ai_core_versions.json  audit_market_data.py  build_data_layer.py  citydata_client.py  config.yaml  daily_report_flow.py  event_store.py  generate_ai_style_report.py  generate_s2_report.py  hk_observation.py  market_metrics.py  s1_reader.py  scoring.py  style_config.json  style_rotation.py  update_macro_market_data.py  update_market_data.py
s3/: README.md  __init__.py  daily_flow.py  generate_report.py  s1_reader.py  style_rotation.py  validation.py
tests/: test_sweet_spot_scoring.py
wb/: __init__.py  api_server.py  calculate_indicators.py  clean_non_trade_days.py  daily_flow.py  dashboard.py  data_fetcher.py  generate_report.py  score_engine.py  tushare_proxy.py  update_data.py
(+166 files in other folders)
